--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <meta content='Hello, I am a beginner Programmer. I have experience as a web developer – both backend and frontend in developing web applications, I have 2 years' name='twitter:description'/>
 <meta content='summary_large_image' name='twitter:card'/>
 <meta content='Sahil Ansari Profile' name='twitter:image:alt'/>
-<meta content='https://i.ibb.co/60RtZCx/IMG-20211022-115310-853.png' name='twitter:image:src'/>
+<meta content='https://i.ibb.co/ZhnqpBF/im-sahil-ansari-30012022-0001.jpg' name='twitter:image:src'/>
 <style id='page-skin-1' type='text/css'><!--
 /* Insert CSS here */
 
