--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 <p class='more-about'>
 <i class='material-icons'>location_on</i> Indian, Uttar Pradesh<br/>
 <i class='material-icons'>mail_outline</i> starworld9mm@gmail.com<br/>
+<i class='material-icons'>calender</i>26 Feb 2004<br/>
 <i class='material-icons'>link</i>
 <a href='https://apkazure.com' target='_blank' title='Fahmi Cog'>https://apkazure.com</a>
 </p>
