--- a/index.html
+++ b/index.html
@@ -84,8 +84,10 @@
 <div class='free'>Modder</div>
 <p class='more-about'>
 <i class='material-icons'>location_on</i> Indian, Uttar Pradesh<br/>
+
+<i class="fa-duotone fa-cake-candles"></i>26 February 2003<br/>
 <i class='material-icons'>mail_outline</i> starworld9mm@gmail.com<br/>
-<i class='material-icons'>calender</i>26 Feb 2004<br/>
+
 <i class='material-icons'>link</i>
 <a href='https://apkazure.com' target='_blank' title='Fahmi Cog'>https://apkazure.com</a>
 </p>
