--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <p class='more-about'>
 <i class='material-icons'>location_on</i> Indian, Uttar Pradesh<br/>
 
-<i class="fa-duotone fa-cake-candles"></i>26 February 2003<br/>
+<i class="fad fa-birthday-cake"></i>26 February 2003<br/>
 <i class='material-icons'>mail_outline</i> starworld9mm@gmail.com<br/>
 
 <i class='material-icons'>link</i>
