--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <div class='frontend'>Front-End Developer</div>
 <div class='free'>Modder</div>
 <p class='more-about'>
-<i class='material-icons'>location_on</i> Indian, Uttar Pradesh<br/>
+<i class='material-icons'>location_on</i>Kopaganj, Uttar Pradesh, India<br/>
 
 <i class="fad fa-birthday-cake"></i>26 February 2003<br/>
 <i class='material-icons'>mail_outline</i> starworld9mm@gmail.com<br/>
