--- a/index.html
+++ b/index.html
@@ -151,10 +151,12 @@
 <div itemprop='mainEntity' itemscope='itemscope' itemtype='https://schema.org/Person'>
 <link href='https://about.fahmicog.site/' itemprop='url'/>
 <ul class='sosmed'>
-<li><a href='https://www.facebook.com/sahilansari9mm' itemprop='sameAs' target='_blank' title='Facebook'><i class='fab fa-facebook'></i></a></li>
-<li><a href='https://twitter.com/im_sahil_ansari' itemprop='sameAs' target='_blank' title='Twitter'><i class='fab fa-twitter'></i></a></li>
-<li><a href='https://instagram.com/im_sahil.ansari/' itemprop='sameAs' target='_blank' title='Instagram'><i class='fab fa-instagram'></i></a></li>
+<li><a href='https://www.facebook.com/imsahilansarii' itemprop='sameAs' target='_blank' title='Facebook'><i class='fab fa-facebook'></i></a></li>
+<li><a href='https://twitter.com/imsahilansarii' itemprop='sameAs' target='_blank' title='Twitter'><i class='fab fa-twitter'></i></a></li>
+<li><a href='https://instagram.com/imsahilansarii/' itemprop='sameAs' target='_blank' title='Instagram'><i class='fab fa-instagram'></i></a></li>
 <li><a href='https://www.youtube.com/sahilansari' itemprop='sameAs' target='_blank' title='Youtube'><i class='fab fa-youtube'></i></a></li>
+<li><a href='https://www.pinterest.com/imsahilansarii' itemprop='sameAs' target='_blank' title='Pinterest'><i class='fab fa-pinterest'></i></a></li>
+
 </ul>
 </div>
 </div>
