--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
   <meta content="website" property="og:type"/>
   <meta content="Hello, I am a beginner Programmer. I have experience as a web developer – both backend and frontend in developing web applications, I have 2 years" property="og:description"/>
   <meta content="Sahil Ansari (#KeepEvolving)" property="og:image:alt"/>
-  <meta content="Head-Logo" property="og:image"/>
+  <meta content="https://i.ibb.co/KFC2rMG/20211103-001412.png" property="og:image"/>
   <!--[ Twitter Card ]-->
   <meta content="Sahil Ansari (#KeepEvolving)" name="twitter:title"/>
   <meta content="https://imsahilansarii.github.io/" name="twitter:url"/>
   <meta content="Hello, I am a beginner Programmer. I have experience as a web developer – both backend and frontend in developing web applications, I have 2 years" name="twitter:description"/>
   <meta content="summary_large_image" name="twitter:card"/>
   <meta content="Sahil Ansari (#KeepEvolving)" name="twitter:image:alt"/>
-  <meta content="Main Profile" name="twitter:image:src"/>
+  <meta content="https://i.ibb.co/4fxmn41/IMG-20220418-072444-860.jpg" name="twitter:image:src"/>
   <style id="page-skin-1" type="text/css">
    <!--
 /* Font Face */
@@ -157,7 +157,7 @@ div.kanan-wrap{padding-right:0}
     <div class="logo">
      <h1>
       <a href="/" title="Sahil Ansari (#KeepEvolving)">
-       <img alt="Sahil Ansari (#KeepEvolving)" src="https://blogger.googleusercontent.com/img/a/AVvXsEgaoqmEufT0QP75DGRcZ7HlgdfJLlCTRtAFFBTAIFOKFpRzzAQ9psxxGhPzDK1-ymwIY2XWbteS9OGkDnkqo7D7o9kBRyAJUbMhcpoj3KPEBFKitXX4CftRYz5Ug2fcfiYRaObKPPSD7udEseFZ1z3fzzknxig0VWzsQSwLkKGFLE77wk0xJEZsoY7K=s0" title="Sahil Ansari (#KeepEvolving)"/>
+       <img alt="Sahil Ansari (#KeepEvolving)" src="https://i.ibb.co/KFC2rMG/20211103-001412.png" title="Sahil Ansari (#KeepEvolving)"/>
       </a>
      </h1>
     </div>
@@ -178,7 +178,7 @@ div.kanan-wrap{padding-right:0}
         </i>
         Story
        </a>
-      </li>
+      </li><!--
       <li>
        <a class="projectx" href="javascript:void" title="Latest Project">
         <i class="material-icons">
@@ -186,7 +186,7 @@ div.kanan-wrap{padding-right:0}
         </i>
         Latest Project
        </a>
-      </li>
+      </li>-->
       <li>
        <a class="templatex" href="javascript:void" title="My Template">
         <i class="material-icons">
@@ -253,7 +253,7 @@ div.kanan-wrap{padding-right:0}
       </div>
      </div>
      <div class="t-2">
-      <img alt="Sahil Ansari" class="saya" src="https://blogger.googleusercontent.com/img/a/AVvXsEiY5uzQvQkbBJmWPZqYg-IkFFgnzv1Y2dPkjyHjV5nMA4Meg6mBac1twEB381Ix0CuDU9vceyMFsuP7SHTRmgYtu2Bzvm6UaDlqa9pMk2zorK2KyNCabTCpKdM2M99VmQlTSf943y-A90wPyGimqvfPn_1wvaJ6qWYq4sM4gUnqpp_m_oIfP77toKP-LQ=s320-rw" title="Sahil Ansari"/>
+      <img alt="Sahil Ansari" class="saya" src="https://i.ibb.co/4fxmn41/IMG-20220418-072444-860.jpg" title="Sahil Ansari"/>
      </div>
     </div>
     <div class="home">
