--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@ div.kanan-wrap{padding-right:0}
        </a>
       </li>-->
       <li>
-       <a class="templatex" href="javascript:void" title="My Template">
+       <a class="templatex" href="https://ApkAzure.com" title="My Template">
         <i class="material-icons">
-         format_paint
+         android
         </i>
-        My Template
+        Modded Apps
        </a>
       </li>
       <li>
