--- a/index.html
+++ b/index.html
@@ -179,20 +179,21 @@ div.kanan-wrap{padding-right:0}
         Story
        </a>
       </li><!--
-      <li>
-       <a class="projectx" href="javascript:void" title="Latest Project">
-        <i class="material-icons">
-         web
-        </i>
-        Latest Project
-       </a>
-      </li>-->
+      -->
       <li>
        <a class="templatex" href="https://ApkAzure.com" title="My Template">
         <i class="material-icons">
          android
         </i>
         Modded Apps
+       </a>
+      </li>
+<li>
+       <a class="projectx" href="javascript:void" title="Latest Project">
+        <i class="material-icons">
+         tools
+        </i>
+        My Tools
        </a>
       </li>
       <li>
