--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ div.kanan-wrap{padding-right:0}
 <li>
        <a class="projectx" href="javascript:void" title="Latest Project">
         <i class="material-icons">
-         tools
+         tool
         </i>
         My Tools
        </a>
