--- a/tools/img-to-pdf.html
+++ b/tools/img-to-pdf.html
@@ -14,7 +14,7 @@
     <meta content="Convert Image to pdf, Convert JPG PNG JPEG to PDF online" property="og:title"/>
     <meta content="Images to pdf convertor" property="og:type"/>
     <meta content="https://blogger.googleusercontent.com/img/a/AVvXsEhbMtRhklkYctzeP4SKz-wX07VT9L0bhrycieThDW3C8NbFxbkjy_MBHAoDyHzx65G1N-a6OMjejmYoQF6_2gpgDQx4ZyqJtD0upigRHuDr4MgjhV5ZN0OCpqGoP-8iwkl4STBWM1HaPu_qPmanLdXaA1gPc09hIaqcbjut_PKkqbOBcnWiShHdd5drjg=s1600" property="og:image"/>
-    <meta content="https://imtopdf.blogspot.com/" property="og:url"/>
+    <meta content="https://www.imsahilansarii.cf/tools/img-to-pdf.html" property="og:url"/>
     <meta content="Convert images to PDF online without losing any data and create 4k image PDF without compromising on image quality. It's free and easy to use." property="og:description"/>
     <!-- for Twitter -->
     <meta content="Convert images jpg png jpeg to pdf" name="twitter:card"/>
@@ -131,18 +131,18 @@
        </style>
        <script type="application/ld+json">
         {
-"@context": "https://techsrelated.blogspot.com",
+"@context": "https://www.imsahilansarii.cf/",
 "@graph": [{ 
    "@type":"Organization",
-   "@id": "https://imtopdf.blogspot.com/#organization",
+   "@id": "https://www.imsahilansarii.cf/tools/img-to-pdf.html",
    "name": "Convert IMAGE to PDF",
-   "url": "https://imtopdf.blogspot.com/",
+   "url": "https://www.imsahilansarii.cf/tools/img-to-pdf.html",
    "sameAs": []},
 
 { 
 "@type": "WebSite",
-   "@id": "https://imtopdf.blogspot.com/#website",
-   "url": "https://imtopdf.blogspot.com/",
+   "@id": "https://www.imsahilansarii.cf/tools/img-to-pdf.html",
+   "url": "https://www.imsahilansarii.cf/tools/img-to-pdf.html",
    "name": "Convert IMAGE to PDF",
    "publisher": { 
    "@id":"https://imtopdf.blogspot.com/#organization" } },
@@ -153,7 +153,7 @@
    "url": "/",
    "inLanguage": "en-US",
    "name": "Convert IMAGE to PDF",
-   "isPartOf": { "@id":"https://imtopdf.blogspot.com/#website" },
+   "isPartOf": { "@id":"https://www.imsahilansarii.cf/tools/img-to-pdf.html" },
    "image": { "@type":"ImageObject",
    "@id": "/#primaryimage",
    "url": "https://blogger.googleusercontent.com/img/a/AVvXsEgTUfFVciRFLEEWAGlhHUgTB06x--9JuqF63ru8ueYK5N3azKUnVetU8olbEq3OLgZ1uNuwm-qqeqoOzdc3bHP5G786gTERtfgIwhPYJtojnIPRFGj15xeakuGu0KisPSM2T9HPknlcYR9-B6f55UiTycdfc7zFbVBVckkv_15YNxsSxmxlvgIGhOpe=s336",
@@ -165,7 +165,7 @@
        </script>
        <script type="application/ld+json">
         {
-    "@context": "http://techsrelated.blogspot.com",
+    "@context": "https://www.imsahilansarii.cf",
     "@type": "HowTo",
     "name": "How to convert IMAGE to PDF online",
     "url": "https://imtopdf.blogspot.com",
@@ -195,9 +195,9 @@
        </script>
        <script type="application/ld+json">
         {
-    "@context": "http://techsrelated.blogspot.com",
+    "@context": "https://www.imsahilansarii.cf/",
     "@type": "Product",
-    "brand": "https://imtopdf.blogspot.com",
+    "brand": "https://www.imsahilansarii.cf/tools/img-to-pdf.html",
     "name": "Convert IMAGE to PDF",
     "description": "Combine your JPG, PNG, JPEG images into one PDF document by converting them to PDF.",
     "image": "https://blogger.googleusercontent.com/img/a/AVvXsEgTUfFVciRFLEEWAGlhHUgTB06x--9JuqF63ru8ueYK5N3azKUnVetU8olbEq3OLgZ1uNuwm-qqeqoOzdc3bHP5G786gTERtfgIwhPYJtojnIPRFGj15xeakuGu0KisPSM2T9HPknlcYR9-B6f55UiTycdfc7zFbVBVckkv_15YNxsSxmxlvgIGhOpe=s336",
@@ -245,11 +245,11 @@
     var convertation_to = 'pdf';
     var convertation_to_code = 'others';
        </script>
-       <link href="https://www.blogger.com/profile/08533767006475535463" rel="me">
+    <!--   <link href="https://www.blogger.com/profile/08533767006475535463" rel="me">
         <meta content="ca-host-pub-1556223355139109" name="google-adsense-platform-account"/>
         <meta content="blogspot.com" name="google-adsense-platform-domain"/>
         <script async="" data-ad-client="ca-pub-1531479280526124" data-ad-host="ca-host-pub-1556223355139109" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js">
-        </script>
+        </script>-->
         <!-- data-ad-client=ca-pub-1531479280526124 -->
        </link>
       </link>
@@ -260,18 +260,10 @@
  </head>
  <body>
   <div class="topnav" id="myTopnav">
-   <a class="active" href="/">
+   <a class="active" href="https://www.imsahilansarii.cf/">
     Home
    </a>
-   <a href="https://gradientbg.blogspot.com/">
-    Gradient BG
-   </a>
-   <a href="http://techsrelated.blogspot.com">
-    Tech Blog
-   </a>
-   <a href="https://yogesmali.blogspot.com">
-    Blog
-   </a>
+   
    <a class="icon" href="javascript:void(0);" onclick="myFunction()">
     <i class="fa fa-bars">
     </i>
@@ -484,16 +476,16 @@
        <h3>
         Share it!
        </h3>
-       <a class="share-button facebook" href="https://www.facebook.com/sharer/sharer.php?u=https://imtopdf.blogspot.com/" onclick="goclicky(this); return false;" rel="noopener" target="_blank">
+       <a class="share-button facebook" href="https://www.facebook.com/sharer/sharer.php?u=https://www.imsahilansarii.cf/tools/img-to-pdf.html" onclick="goclicky(this); return false;" rel="noopener" target="_blank">
         Facebook
        </a>
-       <a class="share-button twitter" href="http://www.twitter.com/share?url=https://imtopdf.blogspot.com/&amp;text=Convert IMAGE to PDF Online&amp;hashtags=CONVERTPDF" onclick="goclicky(this); return false;" rel="noopener" target="_blank">
+       <a class="share-button twitter" href="http://www.twitter.com/share?url=https://www.imsahilansarii.cf/tools/img-to-pdf.html&amp;text=Convert IMAGE to PDF Online&amp;hashtags=CONVERTPDF" onclick="goclicky(this); return false;" rel="noopener" target="_blank">
         Twitter
        </a>
-       <a class="share-button reddit" href="http://www.reddit.com/submit?url=https://imtopdf.blogspot.com/&amp;title=Convert IMAGE to PDF Online" onclick="goclicky(this); return false;" rel="noopener" target="_blank">
+       <a class="share-button reddit" href="http://www.reddit.com/submit?url=https://www.imsahilansarii.cf/tools/img-to-pdf.html&amp;title=Convert IMAGE to PDF Online" onclick="goclicky(this); return false;" rel="noopener" target="_blank">
         Reddit
        </a>
-       <a class="share-button pinterest" count-layout="horizontal" href="http://pinterest.com/pin/create/button/?url=https://imtopdf.blogspot.com/&amp;media=https://blogger.googleusercontent.com/img/a/AVvXsEgTUfFVciRFLEEWAGlhHUgTB06x--9JuqF63ru8ueYK5N3azKUnVetU8olbEq3OLgZ1uNuwm-qqeqoOzdc3bHP5G786gTERtfgIwhPYJtojnIPRFGj15xeakuGu0KisPSM2T9HPknlcYR9-B6f55UiTycdfc7zFbVBVckkv_15YNxsSxmxlvgIGhOpe=s336&amp;description=Combine your JPG, PNG, JPEG images into one PDF document online" onclick="goclicky(this); return false;" rel="noopener" target="_blank">
+       <a class="share-button pinterest" count-layout="horizontal" href="http://pinterest.com/pin/create/button/?url=https://www.imsahilansarii.cf/tools/img-to-pdf.html/&amp;media=https://blogger.googleusercontent.com/img/a/AVvXsEgTUfFVciRFLEEWAGlhHUgTB06x--9JuqF63ru8ueYK5N3azKUnVetU8olbEq3OLgZ1uNuwm-qqeqoOzdc3bHP5G786gTERtfgIwhPYJtojnIPRFGj15xeakuGu0KisPSM2T9HPknlcYR9-B6f55UiTycdfc7zFbVBVckkv_15YNxsSxmxlvgIGhOpe=s336&amp;description=Combine your JPG, PNG, JPEG images into one PDF document online" onclick="goclicky(this); return false;" rel="noopener" target="_blank">
         Pinterest
        </a>
       </div>
@@ -603,9 +595,9 @@
       <div class="footer__copir">
        Convert Images to PDF Online
        <b>
-        Blog:
-        <a href="https://techsrelated.blogspot.com" target="_blank">
-         TechsRelated
+        Dev:
+        <a href="https://www.imsahilansarii.cf/" target="_blank">
+         Sahil Ansari
         </a>
        </b>
       </div>
