--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ div.kanan-wrap{padding-right:0}
       </li><!--
       -->
       <li>
-       <a class="templatex" href="https://ApkAzure.com" title="My Template">
+       <a class="template" href="https://ApkAzure.com" title="Website">
         <i class="material-icons">
          android
         </i>
