--- a/index.html
+++ b/index.html
@@ -539,13 +539,13 @@ div.kanan-wrap{padding-right:0}
         star
        </i>
        <i class="material-icons">
+        star
+       </i>
+       <i class="material-icons">
+        star
+       </i>
+       <i class="material-icons">
         star_half
-       </i>
-       <i class="material-icons">
-        star_border
-       </i>
-       <i class="material-icons">
-        star_border
        </i>
        <i class="material-icons">
         star_border
