--- a/index.html
+++ b/index.html
@@ -379,6 +379,15 @@ div.kanan-wrap{padding-right:0}
       Education
      </h3>
      <p class="story-about green">
+
+<i class="material-icons">
+       books
+      </i>
+      Madarsa Arbiya Imdadul ulum
+      <b>
+       2007-2013
+      </b>
+      <br/>
       <i class="material-icons">
        school
       </i>
