--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <meta content="Hello, I am a beginner Programmer. I have experience as a web developer – both backend and frontend in developing web applications, I have 2 years" name="twitter:description"/>
   <meta content="summary_large_image" name="twitter:card"/>
   <meta content="Sahil Ansari (#KeepEvolving)" name="twitter:image:alt"/>
-  <meta content="https://i.ibb.co/4fxmn41/IMG-20220418-072444-860.jpg" name="twitter:image:src"/>
+  <meta content="https://i.ibb.co/BjbNYQb/Pics-Art-01-16-11-23-09.jpg" name="twitter:image:src"/>
   <style id="page-skin-1" type="text/css">
    <!--
 /* Font Face */
@@ -254,7 +254,7 @@ div.kanan-wrap{padding-right:0}
       </div>
      </div>
      <div class="t-2">
-      <img alt="Sahil Ansari" class="saya" src="https://i.ibb.co/4fxmn41/IMG-20220418-072444-860.jpg" title="Sahil Ansari"/>
+      <img alt="Sahil Ansari" class="saya" src="https://i.ibb.co/KFC2rMG/20211103-001412.png" title="Sahil Ansari"/>
      </div>
     </div>
     <div class="home">
