--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ div.kanan-wrap{padding-right:0}
       </div>
      </div>
      <div class="t-2">
-      <img alt="Sahil Ansari" class="saya" src="https://i.ibb.co/KFC2rMG/20211103-001412.png" title="Sahil Ansari"/>
+      <img alt="Sahil Ansari" class="saya" src="https://i.ibb.co/BjbNYQb/Pics-Art-01-16-11-23-09.jpg" title="Sahil Ansari"/>
      </div>
     </div>
     <div class="home">
