--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@ body {
    <div class="card-header">
     <div class="card-cover" style="background-image: url('https://images.unsplash.com/photo-1549068106-b024baf5062d?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=934&amp;q=80')">
     </div>
-    <img alt="avatar" class="card-avatar" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiGwYy2QMYl8S6BQohlPiOvUjYgzvSZ8yaCMts99f84weRTBDpqMIg_qc0FlB02H_Tq_YTi3H1R_SogY0c11hy8PaHWDCHhEkOcUuyhO6PraQEQth4W2ijsC3DeUrNqw4WdQ4hjFiwcmHH_rSAKg3lPwTwP7hh9D610szq3lWZxwggHJe6H6814OXqVeg/s3303/PROFILE.JPG"/>
+    <img alt="avatar" class="card-avatar" src="https://i.ibb.co/BjbNYQb/Pics-Art-01-16-11-23-09.jpg"/>
     <h1 class="card-fullname">
      Sahil Ansari 
     </h1>
