--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ body {
        ABOUT
       </div>
       <p class="card-desc">
-       Habitual Blogger, Professional in JavaScript.Have Littebit knoweledge in PHP, SQL, Python.
+       Habitual Blogger, Have Littebit knoweledge in HTML, CSS, JavaScript, jQuery.
       </p>
      </div>
      <div class="card-social">
