--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ body {
        ABOUT
       </div>
       <p class="card-desc">
-       Habitual Blogger, Have Littebit knoweledge in HTML, CSS, JavaScript, jQuery.
+       Habitual Blogger, Have Littebit knowledge in HTML, CSS, JavaScript, jQuery.
       </p>
      </div>
      <div class="card-social">
@@ -449,7 +449,7 @@ body {
          www.HeyFolks.in
         </div>
         <div class="card-item-desc">
-         Techno Ashwath Share Tips and Tricks about Technology, Blogging, Android, Useful Information and Online Earning Methods,
+         HeyFolks Share Tips and Tricks about Technology, Blogging, Android, Useful Information and Online Earning Methods,
         </div>
        </div>
        <div class="card-item" data-year="2022">
@@ -457,8 +457,7 @@ body {
          www.EvoWorld.xyz
         </div>
         <div class="card-item-desc">
-         SpiderBlogging will help you to build a blogging courier and to earn money with affiliate marketing, also we will share useful tutorials about blogging.
-        </div>
+                 </div>
        </div>
        
       </div>
