--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </title>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" rel="stylesheet"/>
   <style>
-   @import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500|Jost:400,500,600&display=swap");
+   @import url("http://fonts.googleapis.com/css?family=Lato:400,700&display=swap");
 * {
   box-sizing: border-box;
 }
 
 body {
   color: #2b2c48;
-  font-family: "Jost", sans-serif;
+  font-family: "Lato", sans-serif;
   background-image: url(https://images.unsplash.com/photo-1566738780863-f9608f88f3a9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2378&q=80);
   background-repeat: no-repeat;
   background-size: cover;
