--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@ div.kanan-wrap{padding-right:0}
      </h3>
      <div class="grid-wrapper">
       <div class="gr-wrap">
-       <a href="https://www.imsahilansarii.cf/tools/img-to-pdf" target="_blank" title="Api Fahmi">
+       <a href="/tools/img-to-pdf" target="_blank" title="Api Fahmi">
         <img alt="Api Fahmi" src="https://blogger.googleusercontent.com/img/a/AVvXsEixtJUCQbpsFRYJhOJQGM0sUVFMJ2Sp5LC9BxPIgd23aw_STw0ckzzd4ylsy58X5vESimAteiR7vFz0yH82eC4Oc7dKQXpWQR_vJLU0dtXs49uHVqvc5hQl5H7risDMt80Hj5WQtn2WG4bl-VmrzaofrkB3IBXfLsLoMYvIPS1JkgpxRiliimqQPKG3=s1000"/>
        </a>
        <div class="box-wrap">
