--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <meta content="Hello, I am a beginner Programmer. I have experience as a web developer – both backend and frontend in developing web applications, I have 2 years" name="twitter:description"/>
   <meta content="summary_large_image" name="twitter:card"/>
   <meta content="Sahil Ansari (#KeepEvolving)" name="twitter:image:alt"/>
-  <meta content="https://i.ibb.co/BjbNYQb/Pics-Art-01-16-11-23-09.jpg" name="twitter:image:src"/>
+  <meta content="/ab6761610000e5ebc620e9943bac8e49641d53c1.jpeg" name="twitter:image:src"/>
   <style id="page-skin-1" type="text/css">
    <!--
 /* Font Face */
@@ -238,8 +238,8 @@ div.kanan-wrap{padding-right:0}
        <i class="material-icons">
         link
        </i>
-       <a href="https://SahilAnsari.eu.org" target="_blank" title="Fahmi Cog">
-        https://SahilAnsari.eu.org
+       <a href="https://apkazure.com" target="_blank" title="Fahmi Cog">
+        apkazure.com
        </a>
       </p>
       <div class="home">
