--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@ div.kanan-wrap{padding-right:0}
      <p>
       <i class="fab fa-whatsapp">
       </i>
-      +917309468496 (Chat Whatsapp)
+      +91xxxxxxxxxx (Chat Whatsapp)
       <br/>
       <i class="fab fa-telegram">
       </i>
