--- a/tools/key-for-bomber.html
+++ b/tools/key-for-bomber.html
@@ -64,6 +64,7 @@
         <h1>Flash Bomber Key</h1>
         <p id="loadingText">Generating key, please wait...</p>
         <p id="keyDisplay"></p>
+	 <div style="text-align: center;"><b><span style="color: black; font-family: Lato; font-size: medium;">Made with ❤️ by <a href="https://instagram.com/imsahilansarii" rel="nofollow">Sahil Ansari&nbsp;</a></span></b></div>   
     </div>
 
     <script>
@@ -85,7 +86,7 @@
                 .catch(error => {
                     keyDisplay.textContent = 'An error occurred while fetching the Flash key.';
                 });
-        }, 20000); // 10 seconds
+        }, 10000); // 10 seconds
     </script>
 </body>
 </html>
