--- a/tools/key-for-bomber.html
+++ b/tools/key-for-bomber.html
@@ -64,15 +64,16 @@
         <h1>Flash Bomber Key</h1>
         <p id="loadingText">Generating key, please wait...</p>
         <p id="keyDisplay"></p>
-	 <div style="text-align: center;"><b><span style="color: black; font-family: Lato; font-size: medium;">Made with ❤️ by <a href="https://instagram.com/imsahilansarii" rel="nofollow">Sahil Ansari&nbsp;</a></span></b></div>   
-    </div>
+	     </div>
+	<div style="text-align: center;"><b><span style="color: black; font-family: Lato; font-size: medium;">Made with ❤️ by <a href="https://instagram.com/imsahilansarii" rel="nofollow">Sahil Ansari</a></span></b></div>   
+
 
     <script>
         const loadingText = document.getElementById('loadingText');
         const keyDisplay = document.getElementById('keyDisplay');
 
         setTimeout(() => {
-            fetch('https://bhai4you.com/hsalf/generate.php')
+            fetch('//bhai4you.com/hsalf/generate.php')
                 .then(response => response.json())
                 .then(data => {
                     if (data.key) {
