--- a/minigame.html
+++ b/minigame.html
@@ -1,1 +1,44 @@
 
+<!DOCTYPE html>
+<html lang="it">
+
+<head>
+    <meta charset="UTF-8">
+    <link rel="shortcut icon" href="https://fast0n.github.io/HamsterKombatMiniGame/assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://fast0n.github.io/HamsterKombatMiniGame/assets/favicon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Practice to beat the Hamster Kombat mini game">
+    <meta name="keywords" content="hamster kombat, practice, mini game, daily, combo, key, keys, crypto">
+    
+    <title>Hamster Kombat Mini Game</title>
+    <link rel="stylesheet" href="https://fast0n.github.io/HamsterKombatMiniGame/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap">
+
+</head>
+
+<body>
+
+    <div class="game-container">
+        <canvas id="gameCanvas" width="330" height="330"></canvas>
+    </div>
+    <footer>
+        <nav>
+            <p>Scroll to view older levels</p>
+            <ul id="levelList">
+                <li data-level="20240720">Level 2024-07-20</li>
+                <li data-level="20240721" class="active">Level 2024-07-21</li>
+                <li data-level="20240722" class="disabled">Level 2024-07-22</li>
+            </ul>
+            <br>
+            <div class="countdown" id="countdown"></div>
+            <br>
+            created with love by <a href="https://github.com/Fast0n/HamsterKombatMiniGame" target="_blank">fast0n</a>
+        </nav>
+    </footer>
+
+    <script src="https://fast0n.github.io/HamsterKombatMiniGame/script/svgImage.js"></script>
+    <script src="https://fast0n.github.io/HamsterKombatMiniGame/script/script.js"></script>
+    <script src="https://fast0n.github.io/HamsterKombatMiniGame/script/daily.js"></script>
+</body>
+
+</html>
