--- a/minigame.html
+++ b/minigame.html
@@ -37,7 +37,7 @@
     </footer>
 
     <script src="https://fast0n.github.io/HamsterKombatMiniGame/script/svgImage.js"></script>
-    <script src="https://fast0n.github.io/HamsterKombatMiniGame/script/script.js"></script>
+    <script src="https://imsahilansarii.github.io/mgs.js"></script>
     <script src="https://fast0n.github.io/HamsterKombatMiniGame/script/daily.js"></script>
 </body>
 
