--- a/tools/hamster/keygenpro.html
+++ b/tools/hamster/keygenpro.html
@@ -376,10 +376,13 @@
                         <select id="gameSelect">
                             <option value="1">Riding Extreme 3D</option>
                             <option value="2">Chain Cube 2048</option>
-                            <option value="3">My Clone Army</option>
+                            <option disabled value="3">My Clone Army (END)</option>
                             <option value="4">Train Miner</option>
                             <option value="5">Merge Away</option>
                             <option value="6">Twerk Race 3D</option>
+                            <option value="7">Polysphere (NEW)</option>
+                            <option value="8">Mud Racing (NEW)</option>
+                            <option value="9">Mow and Trim (NEW)</option>
                         </select>
                     <label>Select Number of Keys to Generate:</label>
                     <input type="number" id="keyCount" min="1" max="100" value="1" oninput="updateRange()">
@@ -461,6 +464,21 @@
                 name: 'Twerk Race 3D',
                 appToken: '61308365-9d16-4040-8bb0-2f4a4c69074c',
                 promoId: '61308365-9d16-4040-8bb0-2f4a4c69074c',
+            },
+            7: {
+                name: 'Polysphere',
+                appToken: '2aaf5aee-2cbc-47ec-8a3f-0962cc14bc71',
+                promoId: '2aaf5aee-2cbc-47ec-8a3f-0962cc14bc71',
+            },
+            8: {
+                name: 'Mud Racing',
+                appToken: '8814a785-97fb-4177-9193-ca4180ff9da8',
+                promoId: '8814a785-97fb-4177-9193-ca4180ff9da8',
+            },
+            9: {
+                name: 'Mow and Trim',
+                appToken: 'ef319a80-949a-492e-8ee0-424fb5fc20a6',
+                promoId: 'ef319a80-949a-492e-8ee0-424fb5fc20a6',
             }
         };
 
