--- a/tools/hamster/keygenpro.html
+++ b/tools/hamster/keygenpro.html
@@ -380,9 +380,10 @@
                             <option value="4">Train Miner</option>
                             <option value="5">Merge Away</option>
                             <option value="6">Twerk Race 3D</option>
-                            <option value="7">Polysphere (NEW)</option>
-                            <option value="8">Mud Racing (NEW)</option>
-                            <option value="9">Mow and Trim (NEW)</option>
+                            <option value="7">Polysphere</option>
+                            <option value="8">Mud Racing</option>
+                            <option value="9">Mow and Trim</option>
+                            <option value="10">Cafe Dash (NEW)</option>
                         </select>
                     <label>Select Number of Keys to Generate:</label>
                     <input type="number" id="keyCount" min="1" max="100" value="1" oninput="updateRange()">
@@ -479,6 +480,11 @@
                 name: 'Mow and Trim',
                 appToken: 'ef319a80-949a-492e-8ee0-424fb5fc20a6',
                 promoId: 'ef319a80-949a-492e-8ee0-424fb5fc20a6',
+            },
+            10: {
+                name: 'Cafe Dash',
+                appToken: 'bc0971b8-04df-4e72-8a3e-ec4dc663cd11',
+                promoId: 'bc0971b8-04df-4e72-8a3e-ec4dc663cd11',
             }
         };
 
